[gd_scene load_steps=22 format=3 uid="uid://ciinhkhf0s14n"]

[ext_resource type="Script" uid="uid://bhu1jqfr66fh7" path="res://scenes/main_menu.gd" id="1_bqqt6"]
[ext_resource type="PackedScene" uid="uid://bdgi38t1sv8jn" path="res://models/classroom/RiscuitsClassroomNoBorder.gltf" id="2_wu84c"]
[ext_resource type="Environment" uid="uid://cuxra7uc8caxi" path="res://world_environment_stuff/inclass_environment.tres" id="3_8ln24"]
[ext_resource type="Texture2D" uid="uid://b16c6ulqck1ej" path="res://assets from harrish/Art/RiskuitsMenuBlank.png" id="4_rtw2f"]
[ext_resource type="Texture2D" uid="uid://ofp6457bs5ac" path="res://assets from harrish/Art/RiskuitsTitleText.png" id="5_8ln24"]
[ext_resource type="Texture2D" uid="uid://dfttxfyrcejjx" path="res://assets from harrish/Art/RiskuitsMenuGals.png" id="5_oa1go"]

[sub_resource type="BoxShape3D" id="BoxShape3D_rtw2f"]
size = Vector3(29.929565, 1, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_oa1go"]
size = Vector3(29, 1, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_tbmy8"]
size = Vector3(1, 1, 27.82788)

[sub_resource type="BoxShape3D" id="BoxShape3D_jk1qb"]
size = Vector3(1, 1, 19.080078)

[sub_resource type="BoxShape3D" id="BoxShape3D_5dd4i"]
size = Vector3(2.2264404, 1, 1.9765625)

[sub_resource type="BoxShape3D" id="BoxShape3D_lgwnu"]
size = Vector3(5.608124, 1, 1.7752686)

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_ekxnf"]
dof_blur_far_enabled = true
dof_blur_far_distance = 0.01
dof_blur_amount = 0.05

[sub_resource type="Animation" id="Animation_rtw2f"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-0.29147002, 0.45017275, -0.010471975)]
}

[sub_resource type="Animation" id="Animation_8ln24"]
resource_name = "TitleScreenCameraMove"
length = 60.0
loop_mode = 1
markers = [{
"color": Color(1, 1, 1, 1),
"name": &"StartLeft",
"time": 0.01
}]
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 30.233334, 60.2),
"transitions": PackedFloat32Array(1, 0.73204285, 0.70710677),
"update": 0,
"values": [Vector3(-0.29147002, 0.45017275, -0.010471975), Vector3(-0.2914701, -0.43739703, -0.01047198), Vector3(-0.29147002, 0.45017275, -0.010471975)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_oa1go"]
_data = {
&"RESET": SubResource("Animation_rtw2f"),
&"TitleScreenCameraMove": SubResource("Animation_8ln24")
}

[sub_resource type="Animation" id="Animation_tbmy8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_oa1go"]
resource_name = "TitleGals"
length = 4.0
loop_mode = 1
step = 60.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2.0175147, 3.9795012),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(576, 327), Vector2(574.99994, 343.00003), Vector2(576, 327)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jk1qb"]
_data = {
&"RESET": SubResource("Animation_tbmy8"),
&"TitleGals": SubResource("Animation_oa1go")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rtw2f"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.42352942, 0.050980393, 0.21176471, 0.80784315)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oa1go"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.42352942, 0.050980393, 0.21176471, 0.80784315)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[node name="MainMenu" type="Node3D"]
script = ExtResource("1_bqqt6")

[node name="blockbench_export" parent="." instance=ExtResource("2_wu84c")]
transform = Transform3D(3.63, 0, 0, 0, 3.63, 0, 0, 0, 3.63, -8.551542, 0, 0)

[node name="Collisions" type="Node3D" parent="blockbench_export"]
transform = Transform3D(0.2754821, 0, 0, 0, 0.2754821, 0, 0, 0, 0.2754821, 2.3557968, 0, 0)

[node name="Classroom" type="StaticBody3D" parent="blockbench_export/Collisions"]

[node name="BlackBoardWall" type="CollisionShape3D" parent="blockbench_export/Collisions/Classroom"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.8345871, 2.191795, -22.088387)
shape = SubResource("BoxShape3D_rtw2f")

[node name="BackWall" type="CollisionShape3D" parent="blockbench_export/Collisions/Classroom"]
transform = Transform3D(0.89322233, 0, -0.44961524, 0, 1, 0, 0.44961524, 0, 0.89322233, -12.927785, 1.9109516, 3.7474282)
shape = SubResource("BoxShape3D_oa1go")

[node name="BackWall2" type="CollisionShape3D" parent="blockbench_export/Collisions/Classroom"]
transform = Transform3D(0.90553176, 0, 0.42427847, 0, 1, 0, -0.42427847, 0, 0.90553176, 13.129667, 1.9109516, 3.7474282)
shape = SubResource("BoxShape3D_oa1go")

[node name="BackWall3" type="CollisionShape3D" parent="blockbench_export/Collisions/Classroom"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.9109516, 5.2332067)
shape = SubResource("BoxShape3D_oa1go")

[node name="LeftWall" type="CollisionShape3D" parent="blockbench_export/Collisions/Classroom"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -13.814449, 2.1073058, -8.300171)
shape = SubResource("BoxShape3D_tbmy8")

[node name="RightWall" type="CollisionShape3D" parent="blockbench_export/Collisions/Classroom"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 14.261006, 1.334302, -3.3798828)
shape = SubResource("BoxShape3D_jk1qb")

[node name="Tables" type="StaticBody3D" parent="blockbench_export/Collisions"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="blockbench_export/Collisions/Tables"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.11345166, 1.8586333, 0.89737904)
shape = SubResource("BoxShape3D_5dd4i")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="blockbench_export/Collisions/Tables"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6.649981, 1.8586333, 0.89737904)
shape = SubResource("BoxShape3D_5dd4i")

[node name="CollisionShape3D3" type="CollisionShape3D" parent="blockbench_export/Collisions/Tables"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.03974, 1.8586333, 0.89737904)
shape = SubResource("BoxShape3D_5dd4i")

[node name="CollisionShape3D4" type="CollisionShape3D" parent="blockbench_export/Collisions/Tables"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.1030653, 1.8586333, -4.51864)
shape = SubResource("BoxShape3D_5dd4i")

[node name="CollisionShape3D5" type="CollisionShape3D" parent="blockbench_export/Collisions/Tables"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6.408744, 1.8586333, -4.51864)
shape = SubResource("BoxShape3D_5dd4i")

[node name="CollisionShape3D6" type="CollisionShape3D" parent="blockbench_export/Collisions/Tables"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.041035, 1.8586333, -4.51864)
shape = SubResource("BoxShape3D_5dd4i")

[node name="CollisionShape3D7" type="CollisionShape3D" parent="blockbench_export/Collisions/Tables"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.1030653, 1.8586333, -9.546612)
shape = SubResource("BoxShape3D_5dd4i")

[node name="CollisionShape3D8" type="CollisionShape3D" parent="blockbench_export/Collisions/Tables"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6.4545264, 1.8586333, -9.546612)
shape = SubResource("BoxShape3D_5dd4i")

[node name="CollisionShape3D9" type="CollisionShape3D" parent="blockbench_export/Collisions/Tables"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.00923, 1.8586333, -9.546612)
shape = SubResource("BoxShape3D_5dd4i")

[node name="Teacher" type="CollisionShape3D" parent="blockbench_export/Collisions/Tables"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.05429858, 1.8586333, -17.364208)
shape = SubResource("BoxShape3D_lgwnu")

[node name="SpotLight3D" type="SpotLight3D" parent="."]
transform = Transform3D(0.35945526, 0.50032914, -0.7876946, -0.007763355, 0.8456873, 0.5336223, 0.93313, -0.1856982, 0.30787098, -16.899302, 10.0914345, -9.6017)
light_energy = 16.0
light_indirect_energy = 16.0
light_volumetric_fog_energy = 16.0
shadow_enabled = true
shadow_blur = 1.12
spot_range = 70.0
spot_attenuation = 0.9
spot_angle = 71.0

[node name="SpotLight3D2" type="SpotLight3D" parent="."]
transform = Transform3D(-0.07731861, 0.5315332, -0.84350127, -0.0077633313, 0.8456873, 0.5336223, 0.99697626, 0.04780731, -0.06126089, -16.899302, 12.095642, -3.904655)
light_energy = 16.0
light_indirect_energy = 16.0
light_volumetric_fog_energy = 16.0
shadow_enabled = true
shadow_blur = 2.563
spot_range = 70.0
spot_attenuation = 0.9
spot_angle = 71.0
spot_angle_attenuation = 0.4204482

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource("3_8ln24")

[node name="SpotLight3D3" type="SpotLight3D" parent="."]
transform = Transform3D(-0.73742867, 0.6739836, -0.044107314, -0.3970111, -0.37970036, 0.83558965, 0.546426, 0.6336987, 0.5475809, -0.3167162, 10.242211, -19.389572)
light_color = Color(0.99237806, 0.8903938, 0.78785664, 1)
light_energy = 1.32
light_indirect_energy = 16.0
light_volumetric_fog_energy = 16.0
shadow_enabled = true
shadow_blur = 4.081
spot_range = 9.022
spot_attenuation = 0.78
spot_angle = 81.49
spot_angle_attenuation = 0.20306315

[node name="ExitSpotLight" type="SpotLight3D" parent="."]
transform = Transform3D(-0.6096976, 0.74924135, -0.25866237, 0.04644245, 0.35954, 0.9319733, 0.7912724, 0.5562089, -0.25400728, 15.854614, 15.947399, -16.559404)
light_energy = 16.0
light_indirect_energy = 16.0
light_volumetric_fog_energy = 16.0
light_bake_mode = 1
shadow_enabled = true
shadow_blur = 1.12
spot_range = 70.0
spot_attenuation = 0.79
spot_angle = 75.11775

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(0.90163183, -0.11560128, 0.41676876, -0.010030109, 0.95776993, 0.28736055, -0.43238777, -0.2632737, 0.86239654, 6.7145867, 6.6596413, 5.7732286)
attributes = SubResource("CameraAttributesPractical_ekxnf")
current = true
near = 0.046
far = 56.6

[node name="AnimationPlayer" type="AnimationPlayer" parent="Camera3D"]
libraries = {
&"": SubResource("AnimationLibrary_oa1go")
}

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_rtw2f")
expand_mode = 3

[node name="TextureRect3" type="Sprite2D" parent="Control"]
scale = Vector2(0.5949073, 0.59490734)
texture = ExtResource("5_oa1go")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control/TextureRect3"]
libraries = {
&"": SubResource("AnimationLibrary_jk1qb")
}

[node name="TextureRect2" type="TextureRect" parent="Control"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -768.0
offset_top = 112.0
offset_right = 211.0
offset_bottom = 1378.9412
grow_horizontal = 0
texture = ExtResource("5_8ln24")
expand_mode = 1

[node name="PlayButton" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -360.0
offset_top = -200.0
offset_right = -200.0
offset_bottom = -169.0
grow_horizontal = 0
grow_vertical = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_rtw2f")
text = "Play"

[node name="SkipIntroButton" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -360.0
offset_top = -160.0
offset_right = -200.0
offset_bottom = -129.0
grow_horizontal = 0
grow_vertical = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_rtw2f")
text = "Skip Intro"

[node name="QuitButton" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -360.0
offset_top = -120.0
offset_right = -200.0
offset_bottom = -89.0
grow_horizontal = 0
grow_vertical = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_oa1go")
text = "Quit"

[connection signal="button_down" from="Control/PlayButton" to="." method="_on_play_button_button_down"]
[connection signal="button_down" from="Control/SkipIntroButton" to="." method="_on_skip_intro_button_button_down"]
[connection signal="button_down" from="Control/QuitButton" to="." method="_on_quit_button_button_down"]
